# Starlight-PC

./: .env.example  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  Cargo.toml  README.md  RUST_PRIMITIVES.md  build.rs  eslint.config.js  fix_tauri.py  flake.nix  mock_emit.py  nuxt.config.ts  package.json  plan.md  vite.config.ts
.cargo/: config.toml
.github/workflows/: backend-ci.yml  build.yml  cd.yml  ci.yml  frontend-ci.yml  release.yml
.husky/: pre-commit
app/: app.config.ts  app.vue
app/assets/css/: main.css
app/components/: AppHeader.vue
app/components/homepage/: HomeModCard.vue  HomeModCarousel.vue
app/components/modspage/: ModCard.vue  ModSearchList.vue
app/pages/: index.vue  installs.vue
app/pages/mods/: [id].vue  index.vue
app/types/: index.ts
docs/: rust-first-migration.md
installer/: starlight.iss
packaging/linux/: build-appimage.sh  dev.allofus.Starlight.desktop  dev.allofus.Starlight.metainfo.xml  dev.allofus.Starlight.yml  nfpm.yaml
packaging/windows/: starlight.iss
plans/: 001-ci-test-gate.md  002-pin-gpui-component.md  003-atomic-settings-write.md  004-stream-mod-downloads.md  005-update-integrity-check.md  006-keyring-save-preserve-session.md  007-surface-skipped-dependencies.md  008-concurrent-mod-name-fetches.md  README.md
src/: app.css  app.d.ts  assets.rs  main.rs  settings.rs  theme.rs  ui.rs  views.rs  workspace.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: finder.rs  lib.rs
src-tauri/src/backend/: mod.rs
src-tauri/src/backend/commands/: blocking.rs  core.rs  game.rs  mod.rs  mods.rs  platform.rs  profiles.rs
src-tauri/src/backend/services/: bepinex_service.rs  core_service.rs  finder_service.rs  game_workflow_service.rs  launch_service.rs  mod.rs  mod_download_service.rs  mods_workflow_service.rs  profile_service.rs  profile_shortcut_service.rs  profile_zip_service.rs
src-tauri/src/backend/state/: game_runtime.rs
src-tauri/src/commands/: bepinex.rs  download.rs  epic_login_window.rs  finder.rs  game.rs  init.rs  launch.rs  mod.rs  mods.rs  paths.rs  profiles_backend.rs
src-tauri/src/utils/: epic_api.rs  finder.rs  game.rs  mod.rs
src/backend/: api.rs  directories.rs  error.rs  events.rs  mod.rs  runtime.rs  single_instance.rs
src/backend/services/: bepinex_service.rs  core_service.rs  epic_auth_service.rs  epic_launch_service.rs  epic_webview_login.rs  finder_service.rs  http_download.rs  launch_service.rs  migration_service.rs  mod.rs  mod_download_service.rs  mod_install_service.rs  profile_service.rs  profile_shortcut_service.rs  profile_zip_service.rs  region_service.rs  storage_service.rs  update_service.rs  xbox_service.rs
src/backend/state/: game_runtime.rs  mod.rs  mod_catalog_cache.rs
src/lib/: queries.ts  utils.ts
src/lib/api/: client.ts
src/lib/components/icons/: index.ts
src/lib/components/layout/: AppShell.svelte  SideNav.svelte  TopBar.svelte  WindowControls.svelte  shell-controller.ts  types.ts
src/lib/components/mods/: InstallPanel.svelte  ModDetailsSidebar.svelte
src/lib/components/profiles/: CreateProfileDialog.svelte  ProfileCard.svelte
src/lib/components/settings/: AmongUsPathDialog.svelte  EpicLoginDialog.svelte
src/lib/components/ui/: ModeToggle.svelte
src/lib/components/updates/: UpdateNotification.svelte
src/lib/features/mods/: mod-keys.ts  queries.ts  schema.ts
src/lib/features/news/: news-keys.ts  queries.ts  schema.ts
src/lib/features/profiles/: actions.ts  bepinex-download.ts  dependency-resolution.svelte.ts  game-state-service.svelte.ts  game-state.svelte.ts  install-progress.svelte.ts  launch-service.ts  mod-install-service.ts  mutations.ts  profile-keys.ts  profile-platform-adapter.ts  profile-repository.ts  profile-service.ts  profile-workflow-service.ts  queries.ts  schema.ts
src/lib/features/settings/: AmongUsPathDialog.svelte  actions.ts  epic-service.ts  mutations.ts  queries.ts  schema.ts  settings-keys.ts  settings-repository.ts  settings-service.ts
src/lib/infra/http/: starlight-api.ts
src/lib/infra/query/: client.ts  persister.ts
src/lib/infra/rust/: commands.ts  invoke.ts  mutation.ts  query.ts
src/lib/infra/tauri/: fs-watch.ts  store.ts  window.ts
src/lib/utils/: file-watcher.ts  toast.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/_components/: HomeNewsSection.svelte  HomeTrendingModsSection.svelte
src/routes/explore/: +page.svelte
src/routes/settings/: +page.svelte
src/ui/: format.rs  icon.rs  log_language.rs  log_panel.rs  mod.rs  mod_card.rs  profile_icon.rs  stars_background.rs  text_input.rs
src/views/: explore.rs  home.rs  library.rs  library_detail.rs  lobbies.rs  mod.rs  mod_detail.rs  news_detail.rs  servers.rs  settings.rs
src/views/library_detail/: icon_dialog.rs  mod.rs
src_js/lib/components/layout/: AppShell.svelte  (+2 more)
src_js/routes/: +page.svelte
src_js/routes/explore/: +page.svelte
(+89 files in other folders)
