[package]
name = "Starlight"
version = "1.1.1"
description = "Among Us mod manager"
authors = ["yanpla"]
license = "GPL-3.0-only"
repository = ""
edition = "2024"
rust-version = "1.92.0"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git" }
log = "0.4"
env_logger = "0.11"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "2", default-features = false, features = [
  "json",
  "native-tls",
  "gzip",
] }
async-broadcast = "0.7"
base64 = "0.22.1"
urlencoding = "2.1.3"
keyring = "3.6.3"
flate2 = "1.1.9"
zip = "2"
url = "2.5.8"
sha2 = "0.10"
uuid = { version = "1.22.0", features = ["v4"] }
semver = "1.0"
chrono = "0.4"
serde_yaml = "0.9"
directories = "5.0"

[target.'cfg(target_os = "linux")'.dependencies]
home = "0.5.12"
keyring = { version = "3.6.3", features = ["linux-native"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_System_LibraryLoader"] }
image = "0.25"
keyring = { version = "3.6.3", features = ["windows-native"] }

