[package]
name = "Starlight"
version = "2.0.0"
description = "Among Us mod manager"
authors = ["yanpla"]
license = "GPL-3.0-only"
repository = ""
edition = "2024"
rust-version = "1.92.0"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
  "font-kit",
  "runtime_shaders",
  "x11",
  "wayland",
] }
reqwest_client = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = [
  "tree-sitter-markdown",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
tree-sitter = "0.26"
tree-sitter-md = "0.5"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
async-broadcast = "0.7"
urlencoding = "2.1.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
uuid = { version = "1.22.0", default-features = false, features = ["v4"] }
semver = { version = "1.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
directories = "5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_System_LibraryLoader"] }
