[package]
name = "Starlight"
version = "2.0.0-beta.4"
description = "Among Us mod manager"
authors = ["yanpla"]
license = "GPL-3.0-only"
repository = ""
edition = "2024"
rust-version = "1.92.0"

[dependencies]
# Pinned to the same Zed rev that gpui-component depends on, so the whole tree
# resolves to a single gpui. Bump this together with the gpui-component update.
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
  "font-kit",
  "runtime_shaders",
  "x11",
  "wayland",
] }
reqwest_client = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
# Pin gpui-component to the rev the lockfile was tested at. Bump this together
# with the gpui rev above (they must agree on a single gpui).
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "063e55bbc4fb13907a988111e3581595cbcaefde", features = [
  "tree-sitter-markdown",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "063e55bbc4fb13907a988111e3581595cbcaefde" }
tree-sitter = "0.26"
tree-sitter-md = "0.5"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
async-broadcast = "0.7"
urlencoding = "2.1.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
uuid = { version = "1.22.0", default-features = false, features = ["v4"] }
semver = { version = "1.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
directories = "5.0"
flate2 = "1.1.9"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_System_LibraryLoader"] }
# Renders profile icons (png/jpg/…) into the .ico used by desktop shortcuts.
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
  "bmp",
  "webp",
  "ico",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
